feat: Created getAllCategories, added level 2 admin comments
