# src/controllers/Category/getAllCategories.ts
@@ -1,0 +1,16 @@
+import { Request, Response } from 'express'
+import { Category } from '../../models'
+import { Codes } from '../../types'
+import { createErrorMessage } from '../../helpers/messages'
+
+export const getAllCategories = (req: Request, res: Response) => {
+	Category.find({}, { __v: 0 }).exec((error, result) => {
+		if (error) {
+			return res
+				.status(Codes.ERROR)
+				.json(createErrorMessage('Something went wrong.' + error.name))
+		}
+
+		return res.status(Codes.OK).json(result)
+	})
+}
